# FileOp

./: .editorconfig  Changelog.md  FileOp.code-workspace  LICENSE  README.md  cspell.json
.devcontainer/: devcontainer.json
.github/workflows/: CI.yml
scripts/: cmake.build.sh  cmake.configure.sh  cmake.test.sh  container.setup.sh  run_test.sh  run_test_cat.sh  run_test_copy.sh  run_test_mkdir.sh  run_test_move.sh  run_test_performance.sh  run_test_remove.sh  run_test_touch.sh
src/: BasicFileOp.c  BasicFileOp.h  CMakeLists.txt  FileOp.c  FileOp.h  Message.c  Message.h  OperationCat.c  OperationCat.cmake  OperationCat.h  OperationCopy.c  OperationCopy.cmake  OperationCopy.h  OperationMkdir.c  OperationMkdir.cmake  OperationMkdir.h  OperationMove.c  OperationMove.cmake  OperationMove.h  OperationRemove.c  OperationRemove.cmake  OperationRemove.h  OperationTouch.c  OperationTouch.cmake  OperationTouch.h  Types.h  mingw-unicode.c  mingw64.toolchain
